--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
-<div>
+<html>
 <link rel="stylesheet" href = "index.css"/>
+<div>
   <h1>
     This is the header. NEAT!
   </h1>
@@ -26,3 +27,4 @@
     <a href = "https://twitter.com/Awful_Grump"><img src = "http://i.imgur.com/2wgMtAD.png"/></a> | <a href = "https://www.facebook.com/martinmckenna?ref=tn_tnmn"><img src = "http://i.imgur.com/Egmd2W8.png"/></a>
   </footer>
   </div>
+</html>
