--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <html>
-<link rel = "stylesheet" href = "index.css"/>
+  <link rel = "stylesheet" href = "index.css"/>
   <body>
-   <div class = everything>
-    <div id = header>
+    <div class = "everything">
+      <div id = "header">
       <header>
-        <a id = headerimg href="http://martinmckenna.github.io/"><img src="http://i.imgur.com/ObDNuqq.jpg" title="Hosted by imgur.com"/></a>
+        <a id = "headerimg" href="http://martinmckenna.github.io/"><img src="http://i.imgur.com/cCjrz5D.jpg" title="Hosted by imgur.com"/></a>
         <h1>
           Martin McKenna
         </h1>
@@ -12,7 +12,7 @@
           Sophmore at The University of Scranton
         </h2>
       </header>
-        </div>
+      </div>
      <article>
           <p> 
             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam nec sapien ut sapien pellentesque rhoncus lobortis eu nibh. Nulla fermentum sollicitudin auctor. Nullam in ligula lacus. Etiam viverra arcu porta ligula pretium dapibus. Nunc adipiscing, diam laoreet convallis fermentum, massa purus fermentum augue, ac convallis purus erat a eros. Cras at ultricies arcu. Vivamus facilisis ultricies risus, sit amet consequat lectus pulvinar vitae. Proin congue rutrum tempor. Interdum et malesuada fames ac ante ipsum primis in faucibus. Duis eu condimentum elit, a ornare turpis. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Cras pellentesque hendrerit enim a pharetra. Curabitur venenatis laoreet viverra. Curabitur eget lectus semper, consectetur ipsum nec, condimentum erat. Aliquam in ipsum pretium, mollis neque eu, rutrum odio.
@@ -35,11 +35,11 @@
             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam nec sapien ut sapien pellentesque rhoncus lobortis eu nibh. Nulla fermentum sollicitudin auctor. Nullam in ligula lacus. Etiam viverra arcu porta ligula pretium dapibus. Nunc adipiscing, diam laoreet convallis fermentum, massa purus fermentum augue, ac convallis purus erat a eros. Cras at ultricies arcu. Vivamus facilisis ultricies risus, sit amet consequat lectus pulvinar vitae. Proin congue rutrum tempor. Interdum et malesuada fames ac ante ipsum primis in faucibus. Duis eu condimentum elit, a ornare turpis. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Cras pellentesque hendrerit enim a pharetra. Curabitur venenatis laoreet viverra. Curabitur eget lectus semper, consectetur ipsum nec, condimentum erat. Aliquam in ipsum pretium, mollis neque eu, rutrum odio.
           </p>
         </aside>
-    </div>
-     <div id = footer>
+      <div id = footer>
      <footer>
     <a href = "https://twitter.com/Awful_Grump"><img src = "http://i.imgur.com/2wgMtAD.png"/></a> | <a href = "https://www.facebook.com/martinmckenna?ref=tn_tnmn"><img src = "http://i.imgur.com/Egmd2W8.png"/></a>
   </footer>
+    </div>
     </div>
     </body>
   </html>
