fonts and things

--- a/index.html
+++ b/index.html
@@ -6,38 +6,32 @@
       <header>
         <a id = "headerimg" href="http://martinmckenna.github.io/"><img src="http://i.imgur.com/cCjrz5D.jpg" title="Hosted by imgur.com"/></a>
         <h1>
-          Martin McKenna
+          HEADER
         </h1>
         <h2>
-          Sophmore at The University of Scranton
+          This is a placeholder!
         </h2>
       </header>
       </div>
      <article>
           <p> 
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam nec sapien ut sapien pellentesque rhoncus lobortis eu nibh. Nulla fermentum sollicitudin auctor. Nullam in ligula lacus. Etiam viverra arcu porta ligula pretium dapibus. Nunc adipiscing, diam laoreet convallis fermentum, massa purus fermentum augue, ac convallis purus erat a eros. Cras at ultricies arcu. Vivamus facilisis ultricies risus, sit amet consequat lectus pulvinar vitae. Proin congue rutrum tempor. Interdum et malesuada fames ac ante ipsum primis in faucibus. Duis eu condimentum elit, a ornare turpis. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Cras pellentesque hendrerit enim a pharetra. Curabitur venenatis laoreet viverra. Curabitur eget lectus semper, consectetur ipsum nec, condimentum erat. Aliquam in ipsum pretium, mollis neque eu, rutrum odio.
-          </p>
+Now that we know who you are, I know who I am. I'm not a mistake! It all makes sense! In a comic, you know how you can tell who the arch-villain's going to be? He's the exact opposite of the hero. And most times they're friends, like you and me! I should've known way back when... You know why, David? Because of the kids. They called me Mr Glass.          </p>
            <p> 
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam nec sapien ut sapien pellentesque rhoncus lobortis eu nibh. Nulla fermentum sollicitudin auctor. Nullam in ligula lacus. Etiam viverra arcu porta ligula pretium dapibus. Nunc adipiscing, diam laoreet convallis fermentum, massa purus fermentum augue, ac convallis purus erat a eros. Cras at ultricies arcu. Vivamus facilisis ultricies risus, sit amet consequat lectus pulvinar vitae. Proin congue rutrum tempor. Interdum et malesuada fames ac ante ipsum primis in faucibus. Duis eu condimentum elit, a ornare turpis. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Cras pellentesque hendrerit enim a pharetra. Curabitur venenatis laoreet viverra. Curabitur eget lectus semper, consectetur ipsum nec, condimentum erat. Aliquam in ipsum pretium, mollis neque eu, rutrum odio.
-          </p>
+Now that we know who you are, I know who I am. I'm not a mistake! It all makes sense! In a comic, you know how you can tell who the arch-villain's going to be? He's the exact opposite of the hero. And most times they're friends, like you and me! I should've known way back when... You know why, David? Because of the kids. They called me Mr Glass.          </p>
            <p> 
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam nec sapien ut sapien pellentesque rhoncus lobortis eu nibh. Nulla fermentum sollicitudin auctor. Nullam in ligula lacus. Etiam viverra arcu porta ligula pretium dapibus. Nunc adipiscing, diam laoreet convallis fermentum, massa purus fermentum augue, ac convallis purus erat a eros. Cras at ultricies arcu. Vivamus facilisis ultricies risus, sit amet consequat lectus pulvinar vitae. Proin congue rutrum tempor. Interdum et malesuada fames ac ante ipsum primis in faucibus. Duis eu condimentum elit, a ornare turpis. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Cras pellentesque hendrerit enim a pharetra. Curabitur venenatis laoreet viverra. Curabitur eget lectus semper, consectetur ipsum nec, condimentum erat. Aliquam in ipsum pretium, mollis neque eu, rutrum odio.
-          </p>
+Now that we know who you are, I know who I am. I'm not a mistake! It all makes sense! In a comic, you know how you can tell who the arch-villain's going to be? He's the exact opposite of the hero. And most times they're friends, like you and me! I should've known way back when... You know why, David? Because of the kids. They called me Mr Glass.          </p>
         </article>
      <aside>
           <p> 
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam nec sapien ut sapien pellentesque rhoncus lobortis eu nibh. Nulla fermentum sollicitudin auctor. Nullam in ligula lacus. Etiam viverra arcu porta ligula pretium dapibus. Nunc adipiscing, diam laoreet convallis fermentum, massa purus fermentum augue, ac convallis purus erat a eros. Cras at ultricies arcu. Vivamus facilisis ultricies risus, sit amet consequat lectus pulvinar vitae. Proin congue rutrum tempor. Interdum et malesuada fames ac ante ipsum primis in faucibus. Duis eu condimentum elit, a ornare turpis. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Cras pellentesque hendrerit enim a pharetra. Curabitur venenatis laoreet viverra. Curabitur eget lectus semper, consectetur ipsum nec, condimentum erat. Aliquam in ipsum pretium, mollis neque eu, rutrum odio.
-          </p>
+Now that we know who you are, I know who I am. I'm not a mistake! It all makes sense! In a comic, you know how you can tell who the arch-villain's going to be? He's the exact opposite of the hero. And most times they're friends, like you and me! I should've known way back when... You know why, David? Because of the kids. They called me Mr Glass.          </p>
            <p> 
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam nec sapien ut sapien pellentesque rhoncus lobortis eu nibh. Nulla fermentum sollicitudin auctor. Nullam in ligula lacus. Etiam viverra arcu porta ligula pretium dapibus. Nunc adipiscing, diam laoreet convallis fermentum, massa purus fermentum augue, ac convallis purus erat a eros. Cras at ultricies arcu. Vivamus facilisis ultricies risus, sit amet consequat lectus pulvinar vitae. Proin congue rutrum tempor. Interdum et malesuada fames ac ante ipsum primis in faucibus. Duis eu condimentum elit, a ornare turpis. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Cras pellentesque hendrerit enim a pharetra. Curabitur venenatis laoreet viverra. Curabitur eget lectus semper, consectetur ipsum nec, condimentum erat. Aliquam in ipsum pretium, mollis neque eu, rutrum odio.
-          </p>
+Now that we know who you are, I know who I am. I'm not a mistake! It all makes sense! In a comic, you know how you can tell who the arch-villain's going to be? He's the exact opposite of the hero. And most times they're friends, like you and me! I should've known way back when... You know why, David? Because of the kids. They called me Mr Glass.          </p>
            <p> 
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam nec sapien ut sapien pellentesque rhoncus lobortis eu nibh. Nulla fermentum sollicitudin auctor. Nullam in ligula lacus. Etiam viverra arcu porta ligula pretium dapibus. Nunc adipiscing, diam laoreet convallis fermentum, massa purus fermentum augue, ac convallis purus erat a eros. Cras at ultricies arcu. Vivamus facilisis ultricies risus, sit amet consequat lectus pulvinar vitae. Proin congue rutrum tempor. Interdum et malesuada fames ac ante ipsum primis in faucibus. Duis eu condimentum elit, a ornare turpis. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Cras pellentesque hendrerit enim a pharetra. Curabitur venenatis laoreet viverra. Curabitur eget lectus semper, consectetur ipsum nec, condimentum erat. Aliquam in ipsum pretium, mollis neque eu, rutrum odio.
-          </p>
+Now that we know who you are, I know who I am. I'm not a mistake! It all makes sense! In a comic, you know how you can tell who the arch-villain's going to be? He's the exact opposite of the hero. And most times they're friends, like you and me! I should've known way back when... You know why, David? Because of the kids. They called me Mr Glass.          </p>
         </aside>
       <div id = footer>
      <footer>
-    <a href = "https://twitter.com/Awful_Grump"><img src = "http://i.imgur.com/2wgMtAD.png"/></a> | <a href = "https://www.facebook.com/martinmckenna?ref=tn_tnmn"><img src = "http://i.imgur.com/Egmd2W8.png"/></a>
+    <a href = "https://twitter.com/Awful_Grump"><img src = "http://i.imgur.com/2wgMtAD.png"/></a>
   </footer>
     </div>
     </div>
