--- a/index.html
+++ b/index.html
@@ -4,13 +4,7 @@
     <div class = "everything">
       <div id = "header">
       <header>
-        <a id = "headerimg" href="http://martinmckenna.github.io/"><img src="http://i.imgur.com/cCjrz5D.jpg" title="Hosted by imgur.com"/></a>
-        <h1>
-          HEADER
-        </h1>
-        <h2>
-          This is a placeholder!
-        </h2>
+        <a id = "headerimg" href="martinmckenna.github.io"><img src="http://i.imgur.com/wAwte65.png" title="Hosted by imgur.com"/></a>
       </header>
       </div>
      <article>
