--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <div class = "everything">
       <div id = "header">
       <header>
-        <a id = "headerimg" href="martinmckenna.github.io"><img src="http://i.imgur.com/wAwte65.png" title="Hosted by imgur.com"/></a>
+        <a id = "headerimg" href="http://martinmckenna.github.io/"><img src="http://i.imgur.com/wAwte65.png" title="Hosted by imgur.com"/></a>
       </header>
       </div>
      <article>
