--- a/index.html
+++ b/index.html
@@ -1,36 +1,41 @@
-<html>
-  <link rel = "stylesheet" href = "index.css"/>
-  <body>
-    <div class = "everything">
-      <div id = "header">
-      <header>
-        <a id = "headerimg" href="http://martinmckenna.github.io/"><img src="http://i.imgur.com/wAwte65.png" title="Hosted by imgur.com"/></a>
-      </header>
+   <body>
+     <link rel = "stylesheet" href = "index.css"/>
+     <div class = "header">
+      <div id = "headercontent">
+      <a id = "logo" href="http://martinmckenna.github.io/"><img src="http://i.imgur.com/3SPYzZo.png" title="Hosted by imgur.com"/></a>
+  </div>
+    </div>
+    <div class = "container">
+      <div id = "article">
+        <h1 id = "about">
+	 About Me
+	 </h1>
+        <p> 
+Hi. My name's Martin McKenna. I'm from Northeast Philadelphia, attending school at the University of Scranton. This is my personal website, which for now, I'll be hosting my resume, school projects, and other miscellaneous material I can think of which might land me a job.
+        </p>
+        <p>
+              Now that we know who you are, I know who I am. I'm not a mistake! It all makes sense! In a comic, you know how you can tell who the arch-villain's going to be? He's the exact opposite of the hero. And most times they're friends, like you and me! I should've known way back when... You know why, David? Because of the kids. They called me Mr Glass.
+            </p>
+        <p>
+              Now that we know who you are, I know who I am. I'm not a mistake! It all makes sense! In a comic, you know how you can tell who the arch-villain's going to be? He's the exact opposite of the hero. And most times they're friends, like you and me! I should've known way back when... You know why, David? Because of the kids. They called me Mr Glass.
+            </p>
       </div>
-     <article>
-	 <h1>
-	 Something That Is A Header Possibly to a Blog
-	 </h2>
-          <p> 
-Now that we know who you are, I know who I am. I'm not a mistake! It all makes sense! In a comic, you know how you can tell who the arch-villain's going to be? He's the exact opposite of the hero. And most times they're friends, like you and me! I should've known way back when... You know why, David? Because of the kids. They called me Mr Glass.          </p>
-           <p> 
-Now that we know who you are, I know who I am. I'm not a mistake! It all makes sense! In a comic, you know how you can tell who the arch-villain's going to be? He's the exact opposite of the hero. And most times they're friends, like you and me! I should've known way back when... You know why, David? Because of the kids. They called me Mr Glass.          </p>
-           <p> 
-Now that we know who you are, I know who I am. I'm not a mistake! It all makes sense! In a comic, you know how you can tell who the arch-villain's going to be? He's the exact opposite of the hero. And most times they're friends, like you and me! I should've known way back when... You know why, David? Because of the kids. They called me Mr Glass.          </p>
-        </article>
-     <aside>
-          <p> 
-Now that we know who you are, I know who I am. I'm not a mistake! It all makes sense! In a comic, you know how you can tell who the arch-villain's going to be? He's the exact opposite of the hero. And most times they're friends, like you and me! I should've known way back when... You know why, David? Because of the kids. They called me Mr Glass.          </p>
-           <p> 
-Now that we know who you are, I know who I am. I'm not a mistake! It all makes sense! In a comic, you know how you can tell who the arch-villain's going to be? He's the exact opposite of the hero. And most times they're friends, like you and me! I should've known way back when... You know why, David? Because of the kids. They called me Mr Glass.          </p>
-           <p> 
-Now that we know who you are, I know who I am. I'm not a mistake! It all makes sense! In a comic, you know how you can tell who the arch-villain's going to be? He's the exact opposite of the hero. And most times they're friends, like you and me! I should've known way back when... You know why, David? Because of the kids. They called me Mr Glass.          </p>
-        </aside>
-      <div id = footer>
-     <footer>
+          <div id = "aside">
+            <h2>
+              Here's Some More Stuff
+            </h2>
+            <p>
+              Now that we know who you are, I know who I am. I'm not a mistake! It all makes sense! In a comic, you know how you can tell who the arch-villain's going to be? He's the exact opposite of the hero. And most times they're friends, like you and me! I should've known way back when... You know why, David? Because of the kids. They called me Mr Glass.
+            </p>
+            <p>
+              Now that we know who you are, I know who I am. I'm not a mistake! It all makes sense! In a comic, you know how you can tell who the arch-villain's going to be? He's the exact opposite of the hero. And most times they're friends, like you and me! I should've known way back when... You know why, David? Because of the kids. They called me Mr Glass.
+            </p>
+            <p>
+              Now that we know who you are, I know who I am. I'm not a mistake! It all makes sense! In a comic, you know how you can tell who the arch-villain's going to be? He's the exact opposite of the hero. And most times they're friends, like you and me! I should've known way back when... You know why, David? Because of the kids. They called me Mr Glass.
+            </p>
+          </div>
+    </div>
+  <div class = "footer">
     <a href = "https://twitter.com/Awful_Grump"><img src = "http://i.imgur.com/2wgMtAD.png"/></a>
-  </footer>
-    </div>
-    </div>
-    </body>
-  </html>
+    </footer>
+</body>
