added a nav bar

--- a/index.html
+++ b/index.html
@@ -5,7 +5,23 @@
       <a id = "logo" href="http://martinmckenna.github.io/"><img src="http://i.imgur.com/3SPYzZo.png" title="Hosted by imgur.com"/></a>
   </div>
     </div>
-    <div class = "container">
+      <div class = "navbar">
+        <ul>
+          <li id = "home">
+            <a href="http://martinmckenna.github.io/">Home</a>
+          </li>
+          <li id = "resume">
+            <a href="http://martinmckenna.github.io/">Resume</a>
+          </li>
+          <li id = "projects">
+            <a href="http://martinmckenna.github.io/">Projects</a>
+          </li>
+          <li id = "Contact">
+            <a href="http://martinmckenna.github.io/">Contact</a>
+          </li>
+            </ul>
+            </div>
+     <div class = "container">
       <div id = "article">
         <h1 id = "about">
 	 About Me
@@ -35,6 +51,7 @@ Hi. My name's Martin McKenna. I'm from Northeast Philadelphia, attending school 
             </p>
           </div>
     </div>
+     </div>
   <div class = "footer">
     <a href = "https://twitter.com/Awful_Grump"><img src = "http://i.imgur.com/2wgMtAD.png"/></a>
     </footer>
