--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
             <a href="http://martinmckenna.github.io/">Home</a>
           </li>
           <li id = "resume">
-            <a href="http://martinmckenna.github.io/">Resume</a>
+            <a href="http://martinmckenna.github.io/resume.html">Resume</a>
           </li>
           <li id = "projects">
             <a href="http://martinmckenna.github.io/">Projects</a>
