--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
             <a href="http://martinmckenna.github.io/">Home</a>
           </li>
           <li id = "resume">
-            <a href="http://martinmckenna.github.io/resume.html">Resume</a>
+            <a href="http://martinmckenna.github.io/resume">Resume</a>
           </li>
           <li id = "projects">
             <a href="http://martinmckenna.github.io/">Projects</a>
@@ -27,22 +27,17 @@
 	 About Me
 	 </h1>
         <p> 
-Hi. My name's Martin McKenna. I'm from Northeast Philadelphia, attending school at the University of Scranton. This is my personal website, which for now, I'll be hosting my resume, school projects, and other miscellaneous material I can think of which might land me a job.
+          <a id = "piderman" href="http://imgur.com/YEK9Nzv"><img src="http://i.imgur.com/YEK9Nzv.jpg" title="Hosted by imgur.com"/></a>
+Hi. My name's Martin McKenna. I'm from Northeast Philadelphia, currently attending school at the University of Scranton. This is my personal website, where for now, I'll be hosting my resume, school projects, and other miscellaneous material I can think of which might land me a job.
         </p>
         <p>
-              Now that we know who you are, I know who I am. I'm not a mistake! It all makes sense! In a comic, you know how you can tell who the arch-villain's going to be? He's the exact opposite of the hero. And most times they're friends, like you and me! I should've known way back when... You know why, David? Because of the kids. They called me Mr Glass.
-            </p>
-        <p>
-              Now that we know who you are, I know who I am. I'm not a mistake! It all makes sense! In a comic, you know how you can tell who the arch-villain's going to be? He's the exact opposite of the hero. And most times they're friends, like you and me! I should've known way back when... You know why, David? Because of the kids. They called me Mr Glass.
+             Currently, I'm am undergraduate studying Media and Information Technology, so I'm pretty comfortable working with digital content and otehr computer science-y stuff. My full resume and my list of skills can be found  <a href="http://martinmckenna.github.io/">here!</a>
             </p>
       </div>
           <div id = "aside">
             <h2>
               Here's Some More Stuff
             </h2>
-            <p>
-              Now that we know who you are, I know who I am. I'm not a mistake! It all makes sense! In a comic, you know how you can tell who the arch-villain's going to be? He's the exact opposite of the hero. And most times they're friends, like you and me! I should've known way back when... You know why, David? Because of the kids. They called me Mr Glass.
-            </p>
             <p>
               Now that we know who you are, I know who I am. I'm not a mistake! It all makes sense! In a comic, you know how you can tell who the arch-villain's going to be? He's the exact opposite of the hero. And most times they're friends, like you and me! I should've known way back when... You know why, David? Because of the kids. They called me Mr Glass.
             </p>
