--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 Hi. My name's Martin McKenna. I'm from Northeast Philadelphia, currently attending school at the University of Scranton. This is my personal website, where for now, I'll be hosting my resume, school projects, and other miscellaneous material I can think of which might land me a job.
         </p>
         <p>
-             Currently, I'm am undergraduate studying Media and Information Technology, so I'm pretty comfortable working with digital content and otehr computer science-y stuff. My full resume and my list of skills can be found  <a href="http://martinmckenna.github.io/">here!</a>
+             Currently, I'm am undergraduate studying Media and Information Technology, so I'm pretty comfortable working with digital content and other computer science-y stuff. My full resume and my list of skills can be found  <a href="http://martinmckenna.github.io/resume.html">here!</a>
             </p>
       </div>
           <div id = "aside">
