added to resume

--- a/resume.html
+++ b/resume.html
@@ -11,7 +11,7 @@
             <a href="http://martinmckenna.github.io/">Home</a>
           </li>
           <li id = "resume">
-            <a href="http://martinmckenna.github.io/resume">Resume</a>
+            <a href="http://martinmckenna.github.io/resume.html">Resume</a>
           </li>
           <li id = "projects">
             <a href="http://martinmckenna.github.io/">Projects</a>
@@ -119,6 +119,38 @@
          </li>
           <li style="list-style-type: none;">
            Microsoft Office Suite (obviously)
+         </li>
+       </ul>
+  </div>
+  <hr/>
+  <div class = "classes" >
+         <h2>
+           Relevant Courses
+         </h2>
+    <ul>
+         <li>
+           Graphics (COMM 329)
+         </li>
+          <li>
+           Information Technology (PHYS 204)
+         </li>
+      <li>
+           Computer Science I (CMPS 134)
+         </li>
+      <li>
+          Computer Programming II (CMPS 136)
+         </li>
+      <li>
+           Television Production (COMM 222)
+         </li>
+      <li>
+           Computer Literacy (C/IL 102)
+         </li>
+      <li>
+           Web Development (CMPS 202)
+         </li>
+      <li>
+           Computer Networks and Security (CMPS 311)
          </li>
        </ul>
   </div>
