--- a/resume.html
+++ b/resume.html
@@ -31,6 +31,9 @@
            Bachelor of Sciences in Media and Information Technology	    </br>
          University of Scranton, Scranton, PA
          </p>
+         <p id = "uofsdate">
+           Expected 2016
+         </p>
        <ul>
          <li>
            GPA: 3.71
@@ -38,6 +41,9 @@
        </ul>
        <p>
            Roman Catholic High School
+         </p>
+          <p id = "romandate">
+           June 2012
          </p>
        <ul>
          <li>
@@ -54,6 +60,9 @@
            Appco Group US, Philadelphia, PA	    </br>
          Field Representative
          </p>
+       <p id = "appcodate">
+           June 2013 – August 2013 
+         </p>
        <ul>
          <li>
            Performed door-to-door sales, representing one of the leading energy providers in the United States. 
@@ -65,9 +74,13 @@
            Responsible for keeping a consistent weekly sales record and using current software to change residents’ energy supplier to lower their monthly usage rate per kWh
          </li>
        </ul>
+	   </div>
      <p>
            Chickie's and Pete's Crab House and Sports Bar	    </br>
          Kitchen Staff
+         </p>
+<p id = "chickiedate">
+          January 2014 – Present	 
          </p>
        <ul>
          <li>
@@ -122,6 +135,7 @@
          </li>
        </ul>
   </div>
+  </div>
   <hr/>
   <div class = "classes" >
          <h2>
@@ -168,8 +182,6 @@
          </li>
        </ul>
   </div>
-       </div>
-       </div>
      </div>
 </div>
   <div class = "footer">
