--- a/index.html
+++ b/index.html
@@ -48,6 +48,6 @@ Hi. My name's Martin McKenna. I'm from Northeast Philadelphia, currently attendi
     </div>
      </div>
   <div class = "footer">
-    <a href = "https://twitter.com/Awful_Grump"><img src = "http://i.imgur.com/2wgMtAD.png"/></a>
+    <a href = "https://twitter.com/Awful_Grump" target="_blank"><img src = "http://i.imgur.com/2wgMtAD.png"/></a>
     </footer>
 </body>
