--- a/resume.html
+++ b/resume.html
@@ -11,7 +11,7 @@
             <a href="http://martinmckenna.github.io/">Home</a>
           </li>
           <li id = "resume">
-            <a href="http://martinmckenna.github.io/resume.html">Resume</a>
+            <a href="http://martinmckenna.github.io/resume">Resume</a>
           </li>
           <li id = "projects">
             <a href="http://martinmckenna.github.io/">Projects</a>
@@ -76,7 +76,7 @@
        </ul>
 	   </div>
      <p>
-           Chickie's and Pete's Crab House and Sports Bar	    </br>
+           Chickie's and Pete's Crab House and Sports Bar, Philadelphia, PA	    </br>
          Kitchen Staff
          </p>
 <p id = "chickiedate">
@@ -171,7 +171,7 @@
   <hr/>
   <div class = "hobbies" >
          <h2>
-           Hobbies and Interests
+           Activities and Interests
          </h2>
     <ul>
          <li>
@@ -185,6 +185,6 @@
      </div>
 </div>
   <div class = "footer">
-    <a href = "https://twitter.com/Awful_Grump"><img src = "http://i.imgur.com/2wgMtAD.png"/></a>
+    <a href = "https://twitter.com/Awful_Grump" target="_blank"><img src = "http://i.imgur.com/2wgMtAD.png"/></a>
     </footer>
 </body>
