--- a/resume.html
+++ b/resume.html
@@ -40,7 +40,7 @@
          </li>
        </ul>
        <p>
-           Roman Catholic High School
+           Roman Catholic High School, Philadelphia, PA
          </p>
           <p id = "romandate">
            June 2012
