added twitter widget

--- a/index.html
+++ b/index.html
@@ -36,18 +36,15 @@ Hi. My name's Martin McKenna. I'm from Northeast Philadelphia, currently attendi
       </div>
           <div id = "aside">
             <h2>
-              Here's Some More Stuff
+              Tweet Me!
             </h2>
-            <p>
-              Now that we know who you are, I know who I am. I'm not a mistake! It all makes sense! In a comic, you know how you can tell who the arch-villain's going to be? He's the exact opposite of the hero. And most times they're friends, like you and me! I should've known way back when... You know why, David? Because of the kids. They called me Mr Glass.
-            </p>
-            <p>
-              Now that we know who you are, I know who I am. I'm not a mistake! It all makes sense! In a comic, you know how you can tell who the arch-villain's going to be? He's the exact opposite of the hero. And most times they're friends, like you and me! I should've known way back when... You know why, David? Because of the kids. They called me Mr Glass.
-            </p>
+<a class="twitter-timeline" href="https://twitter.com/marty_mckenna" data-widget-id="463808976597950465">Tweets by @marty_mckenna</a>
+<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
+
           </div>
     </div>
      </div>
   <div class = "footer">
-    <a href = "https://twitter.com/Awful_Grump" target="_blank"><img src = "http://i.imgur.com/2wgMtAD.png"/></a>
+    <a href = "https://twitter.com/Marty_McKenna" target="_blank"><img src = "http://i.imgur.com/2wgMtAD.png"/></a>
     </footer>
 </body>
