--- a/resume.html
+++ b/resume.html
@@ -185,6 +185,6 @@
      </div>
 </div>
   <div class = "footer">
-    <a href = "https://twitter.com/Awful_Grump" target="_blank"><img src = "http://i.imgur.com/2wgMtAD.png"/></a>
+    <a href = "https://twitter.com/Marty_McKenna" target="_blank"><img src = "http://i.imgur.com/2wgMtAD.png"/></a>
     </footer>
 </body>
