testing new pages

--- a/resume.html
+++ b/resume.html
@@ -28,11 +28,8 @@
            Education
          </h2>
          <p>
-           Bachelor of Sciences in Media and Information Technology	    </br>
+           Bachelor of Sciences in Media and Information Technology	// Expected 2016    </br>
          University of Scranton, Scranton, PA
-         </p>
-         <p id = "uofsdate">
-           Expected 2016
          </p>
        <ul>
          <li>
@@ -40,10 +37,7 @@
          </li>
        </ul>
        <p>
-           Roman Catholic High School, Philadelphia, PA
-         </p>
-          <p id = "romandate">
-           June 2012
+           Roman Catholic High School, Philadelphia, PA // June 2012
          </p>
        <ul>
          <li>
@@ -57,11 +51,8 @@
            Experience
          </h2>
          <p>
-           Appco Group US, Philadelphia, PA	    </br>
+           Appco Group US, Philadelphia, PA // June 2013 – August 2013 </br>
          Field Representative
-         </p>
-       <p id = "appcodate">
-           June 2013 – August 2013 
          </p>
        <ul>
          <li>
@@ -76,11 +67,8 @@
        </ul>
 	   </div>
      <p>
-           Chickie's and Pete's Crab House and Sports Bar, Philadelphia, PA	    </br>
+           Chickie's and Pete's Crab House and Sports Bar, Philadelphia, PA // January 2014 – Present</br>
          Kitchen Staff
-         </p>
-<p id = "chickiedate">
-          January 2014 – Present	 
          </p>
        <ul>
          <li>
