--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <a href="http://martinmckenna.github.io/">Projects</a>
           </li>
           <li id = "Contact">
-            <a href="http://martinmckenna.github.io/">Contact</a>
+            <a href="http://martinmckenna.github.io/contact">Contact</a>
           </li>
             </ul>
             </div>
