--- a/contact.html
+++ b/contact.html
@@ -22,6 +22,9 @@
             </ul>
             </div>
      <div class = "container">
+<h1>
+Contact Me Using This Form!
+</h1>
 
 <div id="contact-area">
 			
