--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
    <body>
-     <link rel = "stylesheet" href = "index.css"/>
+     <link rel = "stylesheet" href = "styles.css"/>
      <div class = "header">
       <div id = "headercontent">
       <a id = "logo" href="http://martinmckenna.github.io/"><img src="http://i.imgur.com/3SPYzZo.png" title="Hosted by imgur.com"/></a>
