--- a/resume.html
+++ b/resume.html
@@ -1,5 +1,5 @@
    <body>
-     <link rel = "stylesheet" href = "resume.css"/>
+     <link rel = "stylesheet" href = "styles.css"/>
      <div class = "header">
       <div id = "headercontent">
       <a id = "logo" href="http://martinmckenna.github.io/"><img src="http://i.imgur.com/3SPYzZo.png" title="Hosted by imgur.com"/></a>
@@ -14,7 +14,7 @@
             <a href="http://martinmckenna.github.io/resume">Resume</a>
           </li>
           <li id = "projects">
-            <a href="http://martinmckenna.github.io/">Projects</a>
+            <a href="http://martinmckenna.github.io/projects">Projects</a>
           </li>
           <li id = "Contact">
             <a href="http://martinmckenna.github.io/contact">Contact</a>
