--- a/projects.html
+++ b/projects.html
@@ -1,5 +1,5 @@
    <body>
-      	<link rel="stylesheet" type="text/css" href="styles.css" />
+     <link rel = "stylesheet" href = "styles.css"/>
      <div class = "header">
       <div id = "headercontent">
       <a id = "logo" href="http://martinmckenna.github.io/"><img src="http://i.imgur.com/3SPYzZo.png" title="Hosted by imgur.com"/></a>
@@ -22,30 +22,10 @@
             </ul>
             </div>
      <div class = "container">
-<h1 id = "contact">
-Contact Me Using This Form!
-</h1>
-
-<div id="contact-area">
-			
-			<form method="post" action="contactengine.php">
-				<label for="Name">Name:</label>
-				<input type="text" name="Name" id="Name" />
-				
-				<label for="City">City:</label>
-				<input type="text" name="City" id="City" />
-	
-				<label for="Email">Email:</label>
-				<input type="text" name="Email" id="Email" />
-				
-				<label for="Message">Message:</label><br />
-				<textarea name="Message" rows="20" cols="20" id="Message"></textarea>
-
-				<input type="submit" name="submit" value="Submit" class="submit-button" />
-			</form>
-			
-			<div style="clear: both;"></div>
-     </div>
+      <h1 id = "text">
+	  This page is still under construction!
+	  </h1>
+    </div>
      </div>
   <div class = "footer">
     <a href = "https://twitter.com/Marty_McKenna" target="_blank"><img src = "http://i.imgur.com/2wgMtAD.png"/></a>
