--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <a href="http://martinmckenna.github.io/resume">Resume</a>
           </li>
           <li id = "projects">
-            <a href="http://martinmckenna.github.io/">Projects</a>
+            <a href="http://martinmckenna.github.io/projects">Projects</a>
           </li>
           <li id = "Contact">
             <a href="http://martinmckenna.github.io/contact">Contact</a>
