--- a/contact.html
+++ b/contact.html
@@ -22,7 +22,7 @@
             </ul>
             </div>
      <div class = "container">
-<h1 id = "contact">
+<h1 id = "contacttitle">
 Contact Me Using This Form!
 </h1>
 
