--- a/projects.html
+++ b/projects.html
@@ -22,9 +22,9 @@
             </ul>
             </div>
      <div class = "container">
-      <h1 id = "text">
-	  This page is still under construction!
-	  </h1>
+      <h2 id = "text">
+	  There isn't anything here, dinkus!
+	  </h2>
     </div>
      </div>
   <div class = "footer">
