--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
      <link rel = "stylesheet" href = "styles.css"/>
      <div class = "header">
       <div id = "headercontent">
-      <a id = "logo" href="http://martinmckenna.github.io/"><img src="http://i.imgur.com/3SPYzZo.png" title="Hosted by imgur.com"/></a>
+      <a id = "logo" href="http://martinmckenna.github.io/"><img src="http://i.imgur.com/1xwKHeo.png" title="Hosted by imgur.com"/></a>
   </div>
     </div>
       <div class = "navbar">
