--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 	 About Me
 	 </h1>
         <p> 
-          <a id = "piderman" href="http://imgur.com/YEK9Nzv"><img src="http://i.imgur.com/YEK9Nzv.jpg" title="Hosted by imgur.com"/></a>
+          <a id = "headshot"><img src="images/headshot.jpg" title="This is me!" height="300" width="300"/></a>
 Hi. My name's Martin McKenna. I'm from Northeast Philadelphia, currently attending school at the University of Scranton. This is my personal website, where for now, I'll be hosting my resume, school projects, and other miscellaneous material I can think of which might land me a job.
         </p>
         <p>
