--- a/resume.html
+++ b/resume.html
@@ -35,14 +35,20 @@
          <li>
            GPA: 3.71
          </li>
+		 <li>
+           Dean's List
+         </li>
        </ul>
        <p>
            Roman Catholic High School, Philadelphia, PA // June 2012
          </p>
        <ul>
          <li>
-           Graduated w/ Honors and awarded All-Catholic Musician 2012
+           Activities: Cross Country, Concert Band, Jazz Band
          </li>
+		  <li>
+			Awards: All-Catholic Musician 2012
+         </li
        </ul>
        </div>
      <hr/>
