Imported social media icons

--- a/index.html
+++ b/index.html
@@ -2,16 +2,32 @@
 <html lang="en">
 
 <head>
-    <title></title>
+    <title>Martin McKenna</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="styles/reset.css" rel="stylesheet">
     <link href="styles/styles.css" rel="stylesheet">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/webcomponentsjs/0.7.7/webcomponents-lite.min.js"></script>
+    <link rel="import" href="bower_components/social-media-icons/social-media-icons.html">
 </head>
 
 <body>
     <div class="container">
-        <h1>Hello!</h1>
+        <social-media-icons icon="github" color="#bada55" size="320"></social-media-icons>
+        <div class="header" id="title">
+            <h1>Hello!</h1>
+        </div>
+        <div class="header" id="about">
+            <h1>Hello!</h1>
+        </div>
+        <div class="icon">
+        </div>
+        <div class="icon">
+            <p> HeloloHel oloHelolo HeloloHelolo HeloloHelolo HeloloHelolo HeloloHelolo HeloloHeloloH eloloHelolo HeloloHelolo</p>
+        </div>
+        <div class="icon">
+            <p> HeloloHelo loHelolo HeloloHeloloHelo loHelolo HeloloHelolo HeloloHelolo HeloloHeloloH eloloHelolo HeloloHelolo</p>
+        </div>
     </div>
 </body>
 
