--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 <body>
     <div class="container">
-        <social-media-icons icon="github" color="#bada55" size="320"></social-media-icons>
+        <social-media-icons icon="github"></social-media-icons>
         <div class="header" id="title">
             <h1>Hello!</h1>
         </div>
