--- a/index.html
+++ b/index.html
@@ -13,7 +13,6 @@
 
 <body>
     <div class="container">
-        <social-media-icons icon="github"></social-media-icons>
         <div class="header" id="title">
             <h1>Hello!</h1>
         </div>
@@ -21,6 +20,7 @@
             <h1>Hello!</h1>
         </div>
         <div class="icon">
+            <social-media-icons icon="github" id="github"></social-media-icons>
         </div>
         <div class="icon">
             <p> HeloloHel oloHelolo HeloloHelolo HeloloHelolo HeloloHelolo HeloloHelolo HeloloHeloloH eloloHelolo HeloloHelolo</p>
