--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <h1>Hello!</h1>
         </div>
         <div class="icon">
-            <social-media-icons icon="github" id="github"></social-media-icons>
+            <social-media-icons icon="github" size="100"></social-media-icons>
         </div>
         <div class="icon">
             <p> HeloloHel oloHelolo HeloloHelolo HeloloHelolo HeloloHelolo HeloloHelolo HeloloHeloloH eloloHelolo HeloloHelolo</p>
