--- a/index.html
+++ b/index.html
@@ -7,26 +7,29 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="styles/reset.css" rel="stylesheet">
     <link href="styles/styles.css" rel="stylesheet">
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/webcomponentsjs/0.7.7/webcomponents-lite.min.js"></script>
-    <link rel="import" href="bower_components/social-media-icons/social-media-icons.html">
+    <link rel="stylesheet" href="font-awesome-4.7.0/css/font-awesome.min.css">
+    <link href="https://fonts.googleapis.com/css?family=Raleway|Slabo+27px" rel="stylesheet">
 </head>
 
 <body>
     <div class="container">
         <div class="header" id="title">
-            <h1>Hello!</h1>
+            <h1>I'm Marty</h1>
         </div>
         <div class="header" id="about">
-            <h1>Hello!</h1>
+            <p>Martin McKenna is a 22-year old front-end web developer from Philadelphia. He graduated from the University of
+                Scranton in May 2016 with a degree in Media and Information Technology. A majority of his time is spent working
+                in the professional web development industry, while the rest of it is spent listening to Pierce the Veil
+                or talking about Spider-Man.</p>
         </div>
         <div class="icon">
-            <social-media-icons icon="github" size="100"></social-media-icons>
+            <a href="https://github.com/martinmckenna"><i class="fa fa-codepen fa-5x"></i></a>
         </div>
         <div class="icon">
-            <p> HeloloHel oloHelolo HeloloHelolo HeloloHelolo HeloloHelolo HeloloHelolo HeloloHeloloH eloloHelolo HeloloHelolo</p>
+            <a href="http://codepen.io/mmckenna/"><i class="fa fa-github fa-5x" aria-hidden="true"></i></a>
         </div>
         <div class="icon">
-            <p> HeloloHelo loHelolo HeloloHeloloHelo loHelolo HeloloHelolo HeloloHelolo HeloloHeloloH eloloHelolo HeloloHelolo</p>
+            <a href="https://www.linkedin.com/in/mmckenna14"><i class="fa fa-linkedin fa-5x" aria-hidden="true"></i></a>
         </div>
     </div>
 </body>
